--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -65,5 +65,12 @@
     "borderTypeTooltip": "Choose border style",
     "fillColorTooltip": "Choose fill color",
     "cancelAnnotation": "Do you want to cancel this annotation?",
-    "deleteAnnotation": "Do you want to delete this annotation and all associated shapes?"
+    "deleteAnnotation": "Do you want to delete this annotation and all associated shapes?",
+    "deleteShape":"Do you want to delete this shape?",
+    "editModalSaveAnnotationWithNoShapesTitle":"Oops",
+    "editModalSaveAnnotationWithNoShapesMsg":"There are no shapes related to this annotation. Saving the annotation will delete it. Do you want to continue?",
+    "editModalBtnSaveWithoutShapes":"Save annotation without shapes",
+    "editModalBtnCancel":"Cancel",
+    "editModalBtnDeleteAnnotation":"Delete this annotation"
+
 }
